# raytracer

./: Cargo.toml  flake.nix  heaptrack.raytracer.16007.zst  index.html  raytracer.js  raytracer_bg.wasm  sw.js
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 13x7ccxs8v22aysrkqk9a23g405r30zk-source  2ka03v7mq806rsv3kddrqq922mbh204j-source  4s16x81vy6d58ghfiy299j7h2gxpwwpc-source  ar69770sasfpwrayvx9ywvadlhwzvn2x-source  b6vnb230hgq98bbp7xpgszm7bk2m0bz5-source  f9h07vv14qbj9lvfgz39iw5i5nrsfwwg-source  n2gxbn8z1y0zfqza0yp3skkbs0cabihw-source  yh67bnk5fvkyblyj8wrwqyxckacfxscl-source
.github/workflows/: pages.yml  wasm.yml
src/: camera.rs  main.rs  math.rs  vec3.rs
