[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22"
eframe = "0.22"
nalgebra = "0.32.2"
log = "0.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"
rayon = "1.7.0"
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.profile.release]
opt-level = 2 # fast and small wasm
